fix advanced search